--- a/style.css
+++ b/style.css
@@ -713,14 +713,14 @@ button.navbar-toggler:focus {
     .menu-tab.active #one {
       transform: translateY(9px) rotate(-135deg);
       transition: all 0.6s ease-in-out;
-      background-color: var(--clr-def-2); }
+      background-color: var(--clr-def); }
     .menu-tab.active #two {
       opacity: 0;
       transition: 0.4s ease; }
     .menu-tab.active #three {
       transform: translateY(-9px) rotate(-45deg);
       transition: all 0.6s ease-in-out;
-      background-color: var(--clr-def-2); }
+      background-color: var(--clr-def); }
 
 /* menu-hide*/
 .menu-hide {
